Implementação do endpoint de inserir cliente e restaurante
