# src/main/java/com/fiap/ms/usuario/adapters/out/repository/entity/EnderecoEntity.java
@@ -1,35 +1,0 @@
-package com.fiap.ms.usuario.adapters.out.repository.entity;
-
-import jakarta.persistence.Column;
-import jakarta.persistence.Embeddable;
-import lombok.Data;
-
-@Data
-@Embeddable
-public class EnderecoEntity {
-
-    @Column(name = "endereco_logradouro")
-    private String logradouro;
-
-    @Column(name = "endereco_numero")
-    private String numero;
-
-    @Column(name = "endereco_complemento")
-    private String complemento;
-
-    @Column(name = "endereco_bairro")
-    private String bairro;
-
-    @Column(name = "endereco_cidade")
-    private String cidade;
-
-    @Column(name = "endereco_estado")
-    private String estado;
-
-    @Column(name = "endereco_cep")
-    private String cep;
-
-    @Column(name = "endereco_ponto_referencia")
-    private String pontoReferencia;
-
-}
